# algovoi-receipt-verifier

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md
e2e/: test_registry_npm.mjs  test_registry_python.py
python/: pyproject.toml
python/algovoi_receipt_verifier/: __init__.py  errors.py  jws.py  receipt.py
python/algovoi_receipt_verifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_jws.py  test_receipt.py  test_vectors.py
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: errors.ts  index.ts  jws.ts  receipt.ts
typescript/test/: receipt.test.ts
vectors/: generate_vectors.py
vectors/invalid/: i01_tampered_signature.json  i02_unsupported_alg.json  i03_unsupported_canon_version.json  i04_payment_hash_mismatch.json  i05_missing_envelope.json  i06_non_canonical_payload.json  i07_malformed_jws.json  i08_missing_screen_result.json
vectors/valid/: v01_allow.json  v02_refer.json  v03_deny.json  v04_payment_hash_binding.json  v05_single_jurisdiction.json
